# swagger/paths/user.yaml
@@ -107,3 +107,21 @@ changePasscode:
     responses:
       200:
         description: OK
+deviceToken:
+  post:
+    tags:
+      - user
+    description:  Push Device Token
+    produces:
+      - application/json
+    parameters:
+      - name: data
+        description:  device token
+        type: object
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/DeviceToken'
+    responses:
+      200:
+        description: OK
